adicionado desc perante o corrplot

--- a/projeto_modelos.tex
+++ b/projeto_modelos.tex
@@ -522,6 +522,8 @@ O diagrama apresentado demonstra as distribuições dos preços por tipo de aloj
 
 \end{knitrout}
 
+Perante o gráfico, não parece haver uma correlação alta entre o preço e as várias variaveis presentes no \textit{dataset}.
+
 \nobibliography{references.bib}
 \bibliographystyle{plainnat}
 \end{document}
